Implement calendar feed with filtering by day on touch.

--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_calendar_view.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_calendar_view.xml
@@ -1,4 +1,27 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/calendar_fragment_container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/calendar_fragment_container">
+    </FrameLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/calendar_feed_date_container"
+        android:gravity="center"
+        android:textSize="@dimen/calendar_feed_date_container_size"
+        android:background="@color/black"
+        android:textColor="@color/white"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/empty_message"/>
+    <ListView
+        android:id="@+id/calendar_feed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+</LinearLayout>
