--- a/clients/Android/Grapevine/app/src/main/res/values/colors.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="red" type="color">#FFFF4444</color>
     <color name="facebook">#3b5998</color>
     <color name="twitter">#4099FF</color>
+    <color name="event_highlight">#45B773</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
