--- a/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="create_account_password_margin">20dp</dimen>
     <dimen name="event_title_size">27sp</dimen>
     <dimen name="radio_button_size">25sp</dimen>
+    <dimen name="calendar_feed_date_container_size">16sp</dimen>
+    <dimen name="event_feed_title_size">18sp</dimen>
 </resources>
