--- a/clients/Android/Grapevine/app/src/main/res/menu/menu_calendar_view.xml
+++ b/clients/Android/Grapevine/app/src/main/res/menu/menu_calendar_view.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="cs.lmu.grapevine.activities.CalendarView">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/action_add_group" android:title="@string/add_group" android:icon="@drawable/ic_add_box_white_48dp"
+    <item android:id="@+id/action_add_group" android:title="@string/title_activity_manage_feeds" android:icon="@drawable/ic_comment_white_48dp"
         android:orderInCategory="100" app:showAsAction="always"/>
 </menu>
