--- a/clients/Android/Grapevine/app/src/main/res/menu/menu_event_feed.xml
+++ b/clients/Android/Grapevine/app/src/main/res/menu/menu_event_feed.xml
@@ -5,6 +5,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_launch_calendar" android:title="@string/calendar_view"
         android:orderInCategory="5" app:showAsAction="always" android:icon="@drawable/ic_today_white_48dp"/>
-    <item android:id="@+id/action_add_group" android:title="@string/add_group" android:icon="@drawable/ic_add_box_white_48dp"
+    <item android:id="@+id/action_add_group" android:title="@string/title_activity_manage_feeds" android:icon="@drawable/ic_comment_white_48dp"
         android:orderInCategory="100" app:showAsAction="always"/>
 </menu>
