--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -266,7 +266,11 @@
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="ldB-n0-nbC"/>
-                                    <barButtonItem systemItem="add" id="an7-o4-jRu"/>
+                                    <barButtonItem systemItem="add" id="an7-o4-jRu">
+                                        <connections>
+                                            <segue destination="Pn3-Bv-ySk" kind="showDetail" identifier="goToFeedManage" id="F8G-OL-APN"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="KqU-yA-6XY"/>
                                     <barButtonItem title="Calendar" id="0No-qX-5sT">
                                         <connections>
@@ -311,7 +315,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.43529411759999997" green="0.62745098040000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="mt9-32-QmB" firstAttribute="centerX" secondItem="O6W-Oy-8Cr" secondAttribute="centerX" id="mdB-Sb-wtT"/>
                                                         <constraint firstAttribute="height" constant="50" id="n0H-cg-7No"/>
@@ -329,7 +333,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.33003109959999999" green="0.89565577649999994" blue="0.24522612369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" red="0.28627450980392155" green="0.71764705882352942" blue="0.45490196078431372" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="H18-ZR-AzN"/>
                                                         <constraint firstItem="Zko-aF-vmB" firstAttribute="centerY" secondItem="kLF-wH-4yZ" secondAttribute="centerY" id="ak4-sf-l8M"/>
@@ -363,8 +367,10 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="eventDayLabel" destination="mt9-32-QmB" id="1ND-9H-iDT"/>
+                                            <outlet property="eventDayView" destination="O6W-Oy-8Cr" id="xkY-oD-QJJ"/>
                                             <outlet property="eventLocationLabel" destination="WZx-zX-7h1" id="RCJ-tx-slR"/>
                                             <outlet property="eventMonthLabel" destination="Zko-aF-vmB" id="Pln-nI-YF4"/>
+                                            <outlet property="eventMonthView" destination="kLF-wH-4yZ" id="1ex-y6-A1B"/>
                                             <outlet property="eventNameLabel" destination="sse-7D-nHj" id="Aq1-hC-A92"/>
                                             <outlet property="eventTimeLabel" destination="Dd7-EJ-R1I" id="tl8-SW-VqX"/>
                                             <segue destination="AkW-fN-skM" kind="showDetail" identifier="goToEventDetailSegue" id="m2J-bx-KXE"/>
@@ -596,7 +602,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0WV-1d-JCz" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9fo-SM-X0t" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2839" y="1180"/>
+            <point key="canvasLocation" x="2967" y="1168"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vaL-Ne-hcT">
@@ -614,7 +620,112 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1HG-ng-H16" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2026" y="1180"/>
+            <point key="canvasLocation" x="2188" y="1168"/>
+        </scene>
+        <!--Feed Management-->
+        <scene sceneID="pKI-Y3-o5e">
+            <objects>
+                <viewController id="qY9-2n-X4v" customClass="FeedManagementViewController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CdH-eB-vQf"/>
+                        <viewControllerLayoutGuide type="bottom" id="8gf-PB-C78"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="edN-AO-aTe">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hn4-NC-8lu">
+                                <rect key="frame" x="0.0" y="64" width="600" height="472"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="GcL-Ev-IOA" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GcL-Ev-IOA" id="8Ns-gm-Zrr">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Feed Name to Add" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Bg-NC-3cq">
+                                                    <rect key="frame" x="8" y="7" width="516" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DgK-LN-uip">
+                                                    <rect key="frame" x="532" y="7" width="60" height="30"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="CcJ-9d-pwO"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Add!"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="centerY" secondItem="8Ns-gm-Zrr" secondAttribute="centerY" id="AMl-pI-obG"/>
+                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="centerY" secondItem="8Ns-gm-Zrr" secondAttribute="centerY" id="Flj-lo-XUI"/>
+                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="leading" secondItem="8Ns-gm-Zrr" secondAttribute="leadingMargin" id="HpO-gQ-rWX"/>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="leading" secondItem="3Bg-NC-3cq" secondAttribute="trailing" constant="8" id="RW2-l4-AyQ"/>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="trailing" secondItem="8Ns-gm-Zrr" secondAttribute="trailingMargin" id="TjM-fx-Pjw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="button" destination="DgK-LN-uip" id="DDd-am-MJG"/>
+                                            <outlet property="textField" destination="3Bg-NC-3cq" id="d14-6Q-hOA"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1zd-sj-o9r" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1zd-sj-o9r" id="Tbe-yI-d8N">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ad-5a-DLU">
+                                                    <rect key="frame" x="566" y="9" width="26" height="26"/>
+                                                    <state key="normal" image="glyphicons-193-circle-remove">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whq-VM-ibC">
+                                                    <rect key="frame" x="8" y="11" width="76" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="whq-VM-ibC" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="Q1l-kB-X1z"/>
+                                                <constraint firstItem="4ad-5a-DLU" firstAttribute="trailing" secondItem="Tbe-yI-d8N" secondAttribute="trailingMargin" id="ZZc-El-r2j"/>
+                                                <constraint firstItem="4ad-5a-DLU" firstAttribute="centerY" secondItem="Tbe-yI-d8N" secondAttribute="centerY" id="ljy-C3-6fj"/>
+                                                <constraint firstItem="whq-VM-ibC" firstAttribute="leading" secondItem="Tbe-yI-d8N" secondAttribute="leadingMargin" id="mGX-aY-jow"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="button" destination="4ad-5a-DLU" id="Pg0-Hh-Dmf"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hn4-NC-8lu" firstAttribute="leading" secondItem="edN-AO-aTe" secondAttribute="leadingMargin" constant="-20" id="9GB-t4-d4H"/>
+                            <constraint firstItem="Hn4-NC-8lu" firstAttribute="top" secondItem="CdH-eB-vQf" secondAttribute="bottom" id="XXT-uM-UhV"/>
+                            <constraint firstItem="Hn4-NC-8lu" firstAttribute="centerY" secondItem="edN-AO-aTe" secondAttribute="centerY" id="oYf-HN-55L"/>
+                            <constraint firstItem="Hn4-NC-8lu" firstAttribute="centerX" secondItem="edN-AO-aTe" secondAttribute="centerX" id="sSg-aq-yCk"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Feed Management" id="BCD-lt-b5u">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="w3r-j0-M22">
+                            <connections>
+                                <segue destination="zgh-qS-ZN5" kind="unwind" unwindAction="backToEventListViewController:" id="3U7-Px-gX5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XN8-jM-2L2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="zgh-qS-ZN5" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1452" y="1903"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0mP-Ea-cJk">
@@ -652,12 +763,31 @@
             </objects>
             <point key="canvasLocation" x="1220" y="404"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rbD-0u-lcg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pn3-Bv-ySk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZeG-du-QbX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qY9-2n-X4v" kind="relationship" relationship="rootViewController" id="btC-PP-dGb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5cM-PD-M5A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1452" y="1168"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="glyphicons-193-circle-remove" width="26" height="26"/>
         <image name="grapevine" width="473" height="464"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="YbQ-fN-3ob"/>
-        <segue reference="QrZ-Yx-yTX"/>
+        <segue reference="m2J-bx-KXE"/>
     </inferredMetricsTieBreakers>
 </document>
