--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -638,42 +638,55 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="472"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="GcL-Ev-IOA" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="addFeedCell" rowHeight="80" id="GcL-Ev-IOA" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GcL-Ev-IOA" id="8Ns-gm-Zrr">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Feed Name to Add" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Bg-NC-3cq">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Feed Name to Add" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Bg-NC-3cq">
                                                     <rect key="frame" x="8" y="7" width="516" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DgK-LN-uip">
-                                                    <rect key="frame" x="532" y="7" width="60" height="30"/>
+                                                    <rect key="frame" x="532" y="25" width="60" height="30"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="CcJ-9d-pwO"/>
+                                                        <constraint firstAttribute="width" constant="60" id="mfZ-1G-QIe"/>
                                                     </constraints>
                                                     <state key="normal" title="Add!"/>
                                                 </button>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="09o-8W-SVD">
+                                                    <rect key="frame" x="227" y="45" width="147" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="147" id="fe2-Ek-fUA"/>
+                                                    </constraints>
+                                                    <segments>
+                                                        <segment title="Facebook"/>
+                                                        <segment title="Twitter"/>
+                                                    </segments>
+                                                </segmentedControl>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="DgK-LN-uip" firstAttribute="centerY" secondItem="8Ns-gm-Zrr" secondAttribute="centerY" id="AMl-pI-obG"/>
-                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="centerY" secondItem="8Ns-gm-Zrr" secondAttribute="centerY" id="Flj-lo-XUI"/>
-                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="leading" secondItem="8Ns-gm-Zrr" secondAttribute="leadingMargin" id="HpO-gQ-rWX"/>
-                                                <constraint firstItem="DgK-LN-uip" firstAttribute="leading" secondItem="3Bg-NC-3cq" secondAttribute="trailing" constant="8" id="RW2-l4-AyQ"/>
-                                                <constraint firstItem="DgK-LN-uip" firstAttribute="trailing" secondItem="8Ns-gm-Zrr" secondAttribute="trailingMargin" id="TjM-fx-Pjw"/>
+                                                <constraint firstItem="09o-8W-SVD" firstAttribute="centerX" secondItem="8Ns-gm-Zrr" secondAttribute="centerX" id="XLl-eJ-cWd"/>
+                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="leading" secondItem="8Ns-gm-Zrr" secondAttribute="leadingMargin" id="XoR-nH-Qrh"/>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="leading" secondItem="3Bg-NC-3cq" secondAttribute="trailing" constant="8" id="Xtv-qI-50C"/>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="centerY" secondItem="8Ns-gm-Zrr" secondAttribute="centerY" id="cak-ma-21N"/>
+                                                <constraint firstItem="DgK-LN-uip" firstAttribute="trailing" secondItem="8Ns-gm-Zrr" secondAttribute="trailingMargin" id="cpH-0x-YgD"/>
+                                                <constraint firstItem="3Bg-NC-3cq" firstAttribute="top" secondItem="8Ns-gm-Zrr" secondAttribute="topMargin" constant="-1" id="mbp-Ak-X4U"/>
+                                                <constraint firstItem="09o-8W-SVD" firstAttribute="top" secondItem="3Bg-NC-3cq" secondAttribute="bottom" constant="8" id="r48-wi-MI8"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="button" destination="DgK-LN-uip" id="DDd-am-MJG"/>
+                                            <outlet property="segControl" destination="09o-8W-SVD" id="qDS-rF-L6j"/>
                                             <outlet property="textField" destination="3Bg-NC-3cq" id="d14-6Q-hOA"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1zd-sj-o9r" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feedCell" id="1zd-sj-o9r" customClass="EventTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="172" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1zd-sj-o9r" id="Tbe-yI-d8N">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -721,6 +734,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Hn4-NC-8lu" id="mpF-xs-mfz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XN8-jM-2L2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="zgh-qS-ZN5" userLabel="Exit" sceneMemberID="exit"/>
